--- a/commonbase/src/main/res/layout/layout_dialog.xml
+++ b/commonbase/src/main/res/layout/layout_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_centerInParent="true">
 
-    <hxz.www.commonbase.view.roundView.RoundConstraintLayout
+    <com.xingxiu.frame.view.roundView.RoundConstraintLayout
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +122,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_dialog_buttons" />
 
-    </hxz.www.commonbase.view.roundView.RoundConstraintLayout>
+    </com.xingxiu.frame.view.roundView.RoundConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
 
