--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/skin_theme"
-    tools:ignore="MissingDefaultResource">
+     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
     <RelativeLayout
-        android:id="@+id/rl_title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        tools:ignore="MissingConstraints">
+        >
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@mipmap/back"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
-            android:id="@+id/iv_back_notice"
+            android:id="@+id/iv_back_about2"
             />
         <TextView
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="系统消息"
+            android:text="关于"
             android:textSize="22sp"
             android:textColor="#212121"
             android:layout_marginLeft="150dp"
@@ -38,17 +38,9 @@
             android:layout_marginLeft="27dp"
             />
     </RelativeLayout>
-
-    <hxz.www.commonbase.view.KLRefreshLayout
-        android:id="@+id/refreshLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#f2f2f2"
-        app:srlEnableLoadMore="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rl_title"
-        app:layout_constraintRight_toRightOf="parent"
-     />
-
-</android.support.constraint.ConstraintLayout>
+<ImageView
+    android:layout_width="match_parent"
+    android:src="@mipmap/about"
+    android:layout_height="match_parent"></ImageView>
+    </LinearLayout>
+</ScrollView>
