--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -48,6 +48,7 @@
         <LinearLayout
             android:layout_width="351dp"
             android:layout_height="55dp"
+            android:id="@+id/ll_share"
             android:orientation="horizontal"
             >
             <ImageView
@@ -86,6 +87,7 @@
         <LinearLayout
             android:layout_width="351dp"
             android:layout_height="55dp"
+            android:id="@+id/ll_about"
             android:orientation="horizontal"
             >
             <ImageView
@@ -133,6 +135,7 @@
             android:background="@drawable/bottonlan_xiaojiao"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
+            android:id="@+id/bt_exit"
             />
 
 
