--- a/commonbase/src/main/res/layout/layout_dialog.xml
+++ b/commonbase/src/main/res/layout/layout_dialog.xml
@@ -43,7 +43,7 @@
             android:gravity="center"
             android:maxEms="14"
             android:maxLines="3"
-            android:textColor="@color/gray_999999"
+            android:textColor="#212121"
             android:textSize="14dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
