--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,8 @@
         android:layout_height="44dp"
         android:hint="请输入公司名称"
         android:textSize="15sp"
-        android:textColor="#b7b8c1"
+            android:textColor="#212121"
+            android:textColorHint="#b7b8c1"
         android:background="@null"
 
         android:layout_marginLeft="30dp"
@@ -56,7 +57,8 @@
             android:layout_height="44dp"
             android:hint="请输入密码"
             android:textSize="15sp"
-            android:textColor="#b7b8c1"
+            android:textColor="#212121"
+            android:textColorHint="#b7b8c1"
             android:text="root147"
             android:background="@null"
             android:layout_marginLeft="30dp"
@@ -100,7 +102,8 @@
             android:layout_height="44dp"
             android:hint="请输入用户名"
             android:textSize="15sp"
-            android:textColor="#b7b8c1"
+            android:textColor="#212121"
+            android:textColorHint="#b7b8c1"
             android:text="root"
             android:background="@null"
             android:layout_marginLeft="30dp"
