--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,7 +100,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/rl"
+                android:paddingRight="15dp"
+                android:id="@+id/rl_todo"
                 >
                 <ImageView
                     android:layout_width="44dp"
@@ -121,6 +122,7 @@
                     android:id="@+id/tv_examine"
                 />
                 <TextView
+                    android:id="@+id/tv_todoTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="最新待办审批消息提示，最新待办审批"
@@ -130,22 +132,25 @@
                     android:layout_marginTop="35dp"
                     />
                  <TextView
+                     android:id="@+id/tv_todoTime"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="11sp"
                      android:textColor="#858585"
                      android:text="上午 08:18"
-                     android:layout_marginLeft="310dp"
+                     android:layout_alignParentRight="true"
                      android:layout_marginTop="10dp"
                      />
                 <TextView
+                    android:id="@+id/tv_todoCount"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:textSize="11sp"
                     android:textColor="#ffffff"
                     android:text="4"
-                    android:layout_marginLeft="345dp"
-                    android:layout_marginTop="30dp"
+                   android:layout_alignParentRight="true"
+                    android:layout_marginRight="30dp"
+                    android:layout_centerVertical="true"
                     android:background="@drawable/textcolor_red"
                     android:gravity="center"
                     />
@@ -160,6 +165,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
                 android:id="@+id/rl_notice"
+                android:paddingRight="15dp"
                 >
                 <ImageView
                     android:layout_width="44dp"
@@ -179,6 +185,7 @@
                     android:layout_marginTop="10dp"
                     />
                 <TextView
+                    android:id="@+id/tv_noticeTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="最新待办审批消息提示，最新待办审批"
@@ -188,12 +195,13 @@
                     android:layout_marginTop="35dp"
                     />
                 <TextView
+                    android:id="@+id/tv_noticeTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="11sp"
                     android:textColor="#858585"
                     android:text="上午 08:18"
-                    android:layout_marginLeft="310dp"
+                    android:layout_alignParentRight="true"
                     android:layout_marginTop="10dp"
                     />
                 <TextView
@@ -201,8 +209,11 @@
                     android:layout_height="18dp"
                     android:textSize="11sp"
                     android:textColor="#ffffff"
+                    android:id="@+id/tv_noticeCount"
                     android:text="4"
-                    android:layout_marginLeft="345dp"
+                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="30dp"
+                    android:layout_centerVertical="true"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/textcolor_red"
                     android:gravity="center"
@@ -217,6 +228,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
+                android:paddingRight="15dp"
                 android:id="@+id/rl_syetmMsg"
                 >
                 <ImageView
@@ -237,6 +249,7 @@
                     android:layout_marginTop="10dp"
                     />
                 <TextView
+                    android:id="@+id/tv_systemMsgTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="最新待办审批消息提示，最新待办审批"
@@ -246,12 +259,13 @@
                     android:layout_marginTop="35dp"
                     />
                 <TextView
+                    android:id="@+id/tv_systemMsgTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="11sp"
                     android:textColor="#858585"
                     android:text="上午 08:18"
-                    android:layout_marginLeft="310dp"
+                    android:layout_alignParentRight="true"
                     android:layout_marginTop="10dp"
                     />
                 <TextView
@@ -260,8 +274,10 @@
                     android:textSize="11sp"
                     android:textColor="#ffffff"
                     android:text="4"
-                    android:layout_marginLeft="345dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="30dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/tv_systemMsgCount"
                     android:background="@drawable/textcolor_red"
                     android:gravity="center"
                     />
