--- a/app/src/main/res/layout/fragment_noticelist.xml
+++ b/app/src/main/res/layout/fragment_noticelist.xml
@@ -7,37 +7,18 @@
     android:background="@color/skin_theme"
     tools:ignore="MissingDefaultResource">
 
-    <RelativeLayout
-        android:id="@+id/rl_title"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        tools:ignore="MissingConstraints">
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@mipmap/back"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="15dp"
-            android:id="@+id/iv_back_notice"
-            />
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="30dp"
-            android:text="系统消息"
-            android:textSize="22sp"
-            android:textColor="#212121"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="10dp"
-            />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ffffff"
-            android:layout_marginLeft="27dp"
-            />
-    </RelativeLayout>
+    <hxz.www.commonbase.view.KLToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:tb_leftImage="@mipmap/back"
+        app:tb_title="待办详情"
+        android:layout_height="wrap_content" />
+
+
 
     <hxz.www.commonbase.view.KLRefreshLayout
         android:id="@+id/refreshLayout"
@@ -47,7 +28,7 @@
         app:srlEnableLoadMore="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rl_title"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintRight_toRightOf="parent"
      />
 
