--- a/app/src/main/res/layout/item_examine.xml
+++ b/app/src/main/res/layout/item_examine.xml
@@ -37,6 +37,7 @@
                 android:layout_height="30dp"
                 android:src="@mipmap/next"
                 android:layout_marginLeft="320dp"
+                android:visibility="gone"
                 android:layout_marginTop="16dp"
                 />
             <TextView
@@ -46,12 +47,14 @@
                 android:textSize="10sp"
                 android:gravity="bottom"
                 android:layout_marginTop="7dp"
+                android:visibility="gone"
                 android:layout_marginLeft="240dp"
                 />
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="30dp"
                 android:text="张国旺"
+                android:visibility="gone"
                 android:textSize="10sp"
                 android:gravity="bottom"
                 android:layout_marginTop="7dp"
@@ -65,6 +68,7 @@
                 android:layout_width="70dp"
                 android:layout_height="15dp"
                 android:layout_marginTop="50dp"
+                android:visibility="gone"
                 android:layout_marginLeft="10dp"
                 android:text="借款金额："
                 android:textSize="12sp" />
@@ -73,6 +77,7 @@
                 android:layout_width="10dp"
                 android:layout_height="18dp"
                 android:layout_marginLeft="70dp"
+                android:visibility="gone"
                 android:layout_marginTop="50dp"
                 android:text="￥"
                 />
@@ -82,6 +87,7 @@
                 android:layout_height="15dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginLeft="85dp"
+                android:visibility="gone"
                 android:text="200.000.000"
                 android:textSize="12sp"
                 android:id="@+id/tv_money"
@@ -95,6 +101,7 @@
                 android:layout_alignStart="@+id/tv_company"
                 android:layout_marginBottom="-95dp"
                 android:text="业务品种："
+                android:visibility="gone"
                 android:textSize="12sp" />
 
             <TextView
@@ -104,12 +111,14 @@
                 android:layout_marginLeft="70dp"
                 android:layout_marginTop="80dp"
                 android:text="小额贷款"
+                android:visibility="gone"
                 android:textSize="12sp" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="26dp"
                 android:layout_marginTop="70dp"
+
                 android:layout_marginLeft="250dp"
                 android:text="审批活动"
                 android:background="@drawable/bottonyuanj"
@@ -127,6 +136,7 @@
                 android:layout_width="100dp"
                 android:layout_height="20dp"
                 android:textSize="10sp"
+                android:visibility="gone"
                 android:text="开始时间： "
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="125dp"
@@ -136,10 +146,12 @@
                 android:layout_width="100dp"
                 android:layout_height="20dp"
                 android:textSize="10sp"
+                android:visibility="gone"
                 android:text="2019.01.02"
                 android:layout_marginLeft="65dp"
                 android:layout_marginTop="125dp"
                 android:textColor="#2e2e2e "
+
                 android:id="@+id/tv_starttime"
                 />
 
