--- a/app/src/main/res/layout/item_todo_detail.xml
+++ b/app/src/main/res/layout/item_todo_detail.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingTop="20dp"
+    android:background="@color/white"
     android:paddingBottom="20dp"
     android:paddingRight="15dp">
 
@@ -22,8 +23,15 @@
         android:textSize="12sp"
         android:textColor="@color/orange_FFB000"
         tools:text="客戶名稱"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></TextView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/gray_F2F2F2"
+        />
 
 
 </RelativeLayout>
