--- a/commonbase/src/main/res/values/colors.xml
+++ b/commonbase/src/main/res/values/colors.xml
@@ -125,4 +125,7 @@
     <color name="color_B9AA97">#B9AA97</color>
 
     <color name="white">#ffffff</color>
+    <color name="kl_toolbar_left_right_text_color">#666666</color>
+
+    <color name="tb_title">#333333</color>//标题文字
 </resources>
