--- a/app/src/main/res/layout/fragment_tododetaillist.xml
+++ b/app/src/main/res/layout/fragment_tododetaillist.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/skin_theme"
@@ -21,7 +25,7 @@
     <hxz.www.commonbase.view.KLRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="#f2f2f2"
         app:srlEnableLoadMore="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,7 +33,21 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintRight_toRightOf="parent"
      />
-
+    <TextView
+        android:id="@+id/tv_recording"
+        android:layout_width="0dp"
+        android:background="@color/white"
+        android:textSize="15sp"
+        android:text="审核记录"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/refreshLayout"
+        android:textColor="@color/black_333333"
+        android:layout_height="wrap_content"></TextView>
 
 </android.support.constraint.ConstraintLayout>
 
+</android.support.v4.widget.NestedScrollView>
