--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -2,12 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="175dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="#f2f2f2"
         >
@@ -18,68 +18,38 @@
             android:background="#f2f2f2"
             />
         <RelativeLayout
-            android:layout_width="351dp"
-            android:layout_height="144dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="#ffffff"
             >
             <TextView
                 android:id="@+id/tv_company"
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="18dp"
                 android:text="南京龙戈软件有限公司"
                 android:textColor="#212121"
                 android:textSize="16sp" />
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/next"
-                android:layout_marginLeft="320dp"
-                android:visibility="gone"
-                android:layout_marginTop="16dp"
-                />
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="30dp"
-                android:text="发起人："
-                android:textSize="10sp"
-                android:gravity="bottom"
-                android:layout_marginTop="7dp"
-                android:visibility="gone"
-                android:layout_marginLeft="240dp"
-                />
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="30dp"
-                android:text="张国旺"
-                android:visibility="gone"
-                android:textSize="10sp"
-                android:gravity="bottom"
-                android:layout_marginTop="7dp"
-                android:layout_marginLeft="285dp"
-                android:id="@+id/tv_name"
-                />
-
 
 
             <TextView
-                android:layout_width="70dp"
-                android:layout_height="15dp"
-                android:layout_marginTop="50dp"
-                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="借款金额："
+                android:layout_marginTop="50dp"
+                android:text="审批意见："
+                android:textColor="#212121"
                 android:textSize="12sp" />
 
             <TextView
-                android:layout_width="10dp"
-                android:layout_height="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="70dp"
-                android:visibility="gone"
                 android:layout_marginTop="50dp"
-                android:text="￥"
+                android:textColor="#212121"
+                android:text=""
                 />
 
             <TextView
@@ -87,10 +57,9 @@
                 android:layout_height="15dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginLeft="85dp"
-                android:visibility="gone"
                 android:text="200.000.000"
                 android:textSize="12sp"
-                android:id="@+id/tv_money"
+                android:id="@+id/tv_opinion"
                 />
 
 
@@ -101,31 +70,22 @@
                 android:layout_alignStart="@+id/tv_company"
                 android:layout_marginBottom="-95dp"
                 android:text="业务品种："
-                android:visibility="gone"
                 android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_variety"
-                android:layout_width="70dp"
-                android:layout_height="15dp"
-                android:layout_marginLeft="70dp"
-                android:layout_marginTop="80dp"
-                android:text="小额贷款"
-                android:visibility="gone"
-                android:textSize="12sp" />
 
             <Button
                 android:layout_width="wrap_content"
-                android:layout_height="26dp"
-                android:layout_marginTop="70dp"
-
-                android:layout_marginLeft="250dp"
-                android:text="审批活动"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
+                android:text=" "
                 android:background="@drawable/bottonyuanj"
                 android:id="@+id/b_1"
                 android:textColor="#f1f1f1"
                 />
-            <TextView
+            <View
+                android:id="@+id/line1"
                 android:layout_width="341dp"
                 android:layout_height="1dp"
                 android:background="#ebebeb"
@@ -136,30 +96,32 @@
                 android:layout_width="100dp"
                 android:layout_height="20dp"
                 android:textSize="10sp"
-                android:visibility="gone"
-                android:text="开始时间： "
+                android:text="审批人： "
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="125dp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/line1"
                 android:textColor="#2e2e2e "
+                android:id="@+id/tv_owner"
                 />
             <TextView
-                android:layout_width="100dp"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="10sp"
-                android:visibility="gone"
                 android:text="2019.01.02"
                 android:layout_marginLeft="65dp"
-                android:layout_marginTop="125dp"
+                android:layout_marginTop="20dp"
+             android:layout_below="@id/line1"
                 android:textColor="#2e2e2e "
-
                 android:id="@+id/tv_starttime"
                 />
 
             <Button
-                android:layout_width="72dp"
+                android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:layout_marginTop="120dp"
-                android:layout_marginLeft="260dp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/line1"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/button_biankuang"
                 android:id="@+id/bt_time"
                 android:textColor="#f6822b"
